--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tanstack/react-virtual": "^3.13.12",
     "@uiw/react-color": "^2.7.3",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "fabric": "^6.7.1",
+    "cmdk": "^1.1.1",
+    "fabric": "^6.6.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
@@ -24,10 +32,15 @@
     "react": "19.1.0",
     "react-color": "^2.19.3",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "react-spinners": "^0.17.0",
     "redux-persist": "^6.0.0",
     "redux-undo": "^1.1.0",
-    "tailwind-merge": "^3.3.1"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -36,6 +49,7 @@
     "@types/react": "^19",
     "@types/react-color": "^3.0.13",
     "@types/react-dom": "^19",
+    "@types/webfontloader": "^1.6.38",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5"
